--- a/products-app/package.json
+++ b/products-app/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-saga": "^1.2.2",
     "sass": "^1.56.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
